# revrem

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .revrem.toml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  action.yml  docops.config.yaml  patch_cli_ws2.py  patch_cli_ws4_5.py  patch_policy_ws3.py  patch_profiles.py  patch_profiles_ws3.py  patch_triage_ws2.py  pyproject.toml  test_timeout.py  test_to_fix.py
.agents/skills/meminit-docops/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  revrem-action-smoke.yml  revrem-pr.yml  scorecard.yml
docs/: devex_setup.md  next-steps-v0.5.0.md
docs/00-governance/: docops-constitution.md  metadata.schema.json
docs/00-governance/templates/: adr.template.md  fdd.template.md  prd.template.md
docs/05-planning/: behaviour-ledger-task-003.md  plan-001-greenfield-docops-bootstrap-exercise.md  plan-002-tui-run-monitor-execution-deferral.md  plan-003-post-launch-development-roadmap.md  plan-004-triage-stage.md  plan-005-next-steps-v0.5.0.md  scorecard-signed-releases-next-steps.md  tech-debt.md
docs/05-planning/tasks/: task-001-public-github-launch-readiness.md  task-002-next-phase-post-launch-implementation-tasks.md  task-003-reengineer-cli-py.md  task-004-adversarial-review-findings.md  task-004-dogfood-hardening-and-operator-ux.md  task-005-adversarial-review-findings.md  task-006-secondary-harness-live-provider-proof-and-hardening.md  task-007-good-first-issue-gitlab-ci-example.md  task-008-good-first-issue-fish-completion-edge-case.md  task-009-good-first-issue-migration-expert-profile.md
docs/10-prd/: prd-001-interactive-tui-and-profile-system-for-code-review-loop.md
docs/45-adr/: adr-001-package-the-review-loop-as-a-python-cli-with-a-companion-skill.md  adr-002-use-revrem-as-the-public-package-identity.md  adr-003-finding-fingerprint-algorithm-v1.md  adr-004-artifact-schema-v1-and-canonical-writes.md  adr-005-redaction-defaults-for-bug-report-bundles.md  adr-006-triage-artifact-contract-v1.md  adr-007-suppression-file-and-cli-contract.md  adr-008-event-envelope-and-replay-contract.md  adr-009-budget-ceilings-and-cancellation-contract.md  adr-010-harness-capability-contract.md  adr-011-release-trust-and-rollback.md  adr-012-review-loop-application-boundary-and-engine-ownership.md
docs/50-fdd/: fdd-001-cli-wizard.md
docs/52-api/: README.md
docs/52-api/schemas/: bug-bundle-v1.schema.json  diagnostics-v1.schema.json  events-v1.schema.json  report-index-v1.schema.json  routing-v1.schema.json  summary-v1.schema.json  suppressions-v1.schema.json  triage-v1.schema.json
docs/55-testing/: test-001-utility-verification-strategy.md
docs/58-logs/: log-001-public-launch-audit.md
docs/60-runbooks/: guide-001-failure-diagnostics-guide.md  runbook-001-release-and-rollback.md
docs/70-devex/: devex-001-using-code-review-loop.md
docs/assets/: og-image.html  revrem-demo.cast  revrem-demo.sh  revrem-demo.tape
examples/ci-hands-off/: .revrem.toml  README.md
examples/commit-after-remediation/: .revrem.toml  README.md
examples/go/: .revrem.toml  README.md
examples/python-final-pr/: .revrem.toml  README.md
examples/triage-routing/: .revrem.toml  README.md
examples/typescript/: .revrem.toml  README.md
scripts/: dev-check  dev-python  dev-render-diagnostics  install-dev  promote-stable  record-demo
scripts/ci/: post_pr_comment.py
scripts/hooks/: pre-commit  pre-push
src/: tomli_w.py
src/code_review_loop/: __init__.py  __main__.py  _compat_jsonschema.py  _compat_tomli_w.py  application.py  artifact_ignore.py  artifacts.py  budgets.py  bug_bundle.py  check_suggestions.py  cli.py  clock.py  config.py  diagnostics.py  events.py  fingerprints.py  git_context_cache.py  git_hooks.py  git_status.py  harnesses.py  identity.py  invocation.py  iteration_labels.py  loop.py  policy.py  profiles.py  progress.py  prompts_composer.py  provider_failures.py  provider_observations.py  redaction.py  repo_roots.py  report_html.py  reporting.py  resume.py  routing_artifacts.py  routing_timeouts.py  run_guards.py  run_history.py  runner.py  (+16 more)
src/code_review_loop/adapters/: _checks_impl.py  _commit_impl.py  _remediation_impl.py  checks.py  (+11 more)
src/jsonschema/: __init__.py  validators.py
tests/: __init__.py  conftest.py  test_action_yaml.py  test_application_api.py  test_application_headless_integration.py  test_architecture_surface.py  test_artifact_schema.py  test_artifacts.py  test_behaviour_ledger_engine_adt.py  test_budgets.py  test_bug_bundle.py  test_check_suggestions.py  test_checks_harness.py  test_cli.py  test_cli_artifact_ignore.py  test_cli_commands_outcome_gate.py  test_cli_commit_integration.py  test_cli_config_commands.py  test_cli_config_integration.py  test_cli_dispatch.py  test_cli_doctor_integration.py  test_cli_fake_harness_integration.py  test_cli_history_integration.py  test_cli_initial_review_profiles.py  test_cli_integration.py  test_cli_loop_outcomes_integration.py  test_cli_profile_overrides.py  test_cli_progress_integration.py  test_cli_resume_integration.py  test_cli_review_helpers.py  test_cli_subprocess_integration.py  test_cli_summary_integration.py  test_cli_suppressions_integration.py  test_cli_triage_integration.py  test_cli_v2.py  test_cli_wizard.py  test_clock_identity_seam.py  test_commit_harness.py  test_completions.py  test_compose_external_review_prompt.py  (+78 more)
tests/artifacts/: profile_overlap_matrix.json
tests/snapshots/: loop_budget_events.json  loop_budget_summary.json  loop_cancel_events.json  loop_cancel_summary.json  loop_clear_events.json  loop_clear_summary.json  loop_findings_events.json  loop_findings_summary.json  report_index_clear.json
tests/support/: __init__.py  application_runner.py  fake_github_api.py  fakes.py  headless.py  normalize.py  phase_harnesses.py  run_fixtures.py  snapshot.py
tools/: verify_triage_priority_artifact.py
(+151 files in other folders)
