[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "revrem"
version = "0.3.2"
description = "Bounded AI review, remediation, and re-review automation for local repositories."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Colin Farmer" }
]
keywords = ["ai", "code-review", "automation", "devex", "cli", "remediation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["jsonschema>=4.22", "tomli-w>=1.0"]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "detect-secrets>=1.5",
  "import-linter>=2.0",
  "mypy>=1.8",
  "pip-licenses>=5",
  "pre-commit>=4",
  "pytest>=8",
  "rich>=13.7",
  "ruff>=0.5",
  "textual>=0.80",
  "twine>=6",
]
progress = [
  "rich>=13.7",
]
redaction = [
  "detect-secrets>=1.5",
]
tui = [
  "rich>=13.7",
  "textual>=0.80",
]

[project.scripts]
code-review-loop = "code_review_loop.cli:main"
revrem = "code_review_loop.cli:main"

[project.urls]
Homepage = "https://github.com/GitCmurf/revrem"
Source = "https://github.com/GitCmurf/revrem"
Issues = "https://github.com/GitCmurf/revrem/issues"
Changelog = "https://github.com/GitCmurf/revrem/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
code_review_loop = ["prompts/*.txt", "prompts/fragments/*.txt", "schemas/*.json"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

# REVREM-TASK-003 Wave A0: import-linter scaffold. This placeholder contract
# encodes a true-today slice of the dependency rule (domain leaf modules must
# not import the cli God object). The full layered core/adapters/cli contract
# (Contract C4) replaces it in Wave B0.
[tool.importlinter]
root_package = "code_review_loop"

[[tool.importlinter.contracts]]
name = "Domain leaf modules must not import the cli God object (placeholder, superseded in B0)"
type = "forbidden"
source_modules = [
  "code_review_loop.events",
  "code_review_loop.budgets",
  "code_review_loop.triage",
  "code_review_loop.policy",
  "code_review_loop.artifacts",
  "code_review_loop.fingerprints",
  "code_review_loop.redaction",
  "code_review_loop.run_history",
  "code_review_loop.core.state",
]
forbidden_modules = ["code_review_loop.cli"]
