[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "revrem"
version = "0.3.2"
description = "Bounded AI review, remediation, and re-review automation for local repositories."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Colin Farmer" }
]
keywords = ["ai", "code-review", "automation", "devex", "cli", "remediation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["jsonschema>=4.22", "tomli-w>=1.0"]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "detect-secrets>=1.5",
  "import-linter>=2.0",
  "mypy>=1.8",
  "pip-licenses>=5",
  "pre-commit>=4",
  "pytest>=8",
  "rich>=13.7",
  "ruff>=0.5",
  "textual>=0.80",
  "twine>=6",
]
progress = [
  "rich>=13.7",
]
redaction = [
  "detect-secrets>=1.5",
]
tui = [
  "rich>=13.7",
  "textual>=0.80",
]

[project.scripts]
code-review-loop = "code_review_loop.cli.main:main"
revrem = "code_review_loop.cli.main:main"

[project.urls]
Homepage = "https://github.com/GitCmurf/revrem"
Source = "https://github.com/GitCmurf/revrem"
Issues = "https://github.com/GitCmurf/revrem/issues"
Changelog = "https://github.com/GitCmurf/revrem/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
code_review_loop = ["prompts/*.txt", "prompts/fragments/*.txt", "schemas/*.json"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/code_review_loop/cli/__init__.py" = ["E402", "I001"]
"src/code_review_loop/runner.py" = ["E402", "I001"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

# REVREM-TASK-003 Wave C: import-linter guards keep domain leaf modules below
# the CLI package, with stricter core/adapter/runner boundaries below.
[tool.importlinter]
root_package = "code_review_loop"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Domain leaf modules must not import the CLI package"
type = "forbidden"
source_modules = [
  "code_review_loop.events",
  "code_review_loop.budgets",
  "code_review_loop.triage",
  "code_review_loop.policy",
  "code_review_loop.artifacts",
  "code_review_loop.fingerprints",
  "code_review_loop.redaction",
  "code_review_loop.run_history",
  "code_review_loop.core.state",
]
forbidden_modules = ["code_review_loop.cli"]

# REVREM-TASK-003 Wave C remediation: make the dependency rule real. Core is a
# dependency-free decision layer and must not reach edge drivers, adapters,
# terminal/TUI integrations, profiles, or argparse.
[[tool.importlinter.contracts]]
name = "Core must not import edge or adapter modules"
type = "forbidden"
source_modules = [
  "code_review_loop.core",
  "code_review_loop.core.state",
  "code_review_loop.core.ports",
  "code_review_loop.core.engine",
  "code_review_loop.core.outcome",
]
forbidden_modules = [
  "code_review_loop.adapters",
  "code_review_loop.cli",
  "code_review_loop.runner",
  "code_review_loop.profiles",
  "code_review_loop.terminal",
  "code_review_loop.tui",
  "argparse",
]

# REVREM-TASK-003 Wave B1b: policy.py top-level imports must not reach the
# profiles edge module. The lazy import of harnesses inside check_route_capabilities
# is a function-local import and is intentionally permitted here.
[[tool.importlinter.contracts]]
name = "policy.py must not import profiles at the top level (B1b, C4 burn-down)"
type = "forbidden"
source_modules = [
  "code_review_loop.policy",
]
forbidden_modules = [
  "code_review_loop.profiles",
]

[[tool.importlinter.contracts]]
name = "Adapters must not import CLI loop drivers (Wave C3b)"
type = "forbidden"
source_modules = [
  "code_review_loop.adapters",
]
forbidden_modules = [
  "code_review_loop.cli",
  "code_review_loop.runner",
]

[[tool.importlinter.contracts]]
name = "Resume planning must not import the runner (Wave C)"
type = "forbidden"
source_modules = [
  "code_review_loop.resume",
]
forbidden_modules = [
  "code_review_loop.runner",
]

[[tool.importlinter.contracts]]
name = "CLI commands must use the application boundary"
type = "forbidden"
allow_indirect_imports = true
source_modules = [
  "code_review_loop.cli",
]
forbidden_modules = [
  "code_review_loop.runner",
]
